--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <a class="header__logo__a" href="accueil.html">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
                 <div class="local">
-                    <i class=" a fas fa-map-marker-alt local__i"></i>
-                    <div class="a">Paris, Belleville</div>
+                    <div>
+                        <img src="/Font_awesome/map-marker-alt.svg" alt="Icone de localisation restaurant Ohmyfood" class="ico--local">
+                    </div>
+                    <div class="a text--local">Paris, Belleville</div>
                 </div>
             </a>
         </div>
@@ -40,103 +42,113 @@
         <section class="explo">
             <h1 class="heading heading--h1">Réservez le menu qui vous convient</h1>
             <p class="text text--search">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <div class="button button--explo"><a class="a a--explo" href="" >Explorer nos restaurants</a></div>
+            <div class="button button--explo"><a class="a a--explo" href="#resto" >Explorer nos restaurants</a></div>
         </section>
 
-<!-- MAIN/BARNAV-->
-        <nav class="barnav">
-            <h2 class="heading heading--h2">Fonctionnement</h2>
-            <ul class="barnav__ul">
-                <li class="barnav__li barnav__li__first">
-                    <div class="barnav__li__num">1</div>
-                    <div class="barnav__li__div"><i class="fas fa-mobile-alt fa-lg barnav__li__fas barnav__li__fas__tel"></i></div>
-                    <a href="" class="barnav__li__a a">Choisissez un restaurant</a>
+<!-- MAIN/FONCTION-->
+        <section class="fonction">
+            <h2 class="heading heading--h2 heading--h2--fonction">Fonctionnement</h2>
+            <ul class="fonction__ul">
+                <li class="fonction__li fonction__li__first li">
+                    <div class="fonction__li__num">1</div>
+                    <div class="fonction__li__div">
+                        <img class="ico--fonction tel" src="/Font_awesome/mobile-alt.svg" alt="Icone de telephone Ohmyfood"/>
+                    </div>
+                    <a href="" class="fonction__li__a a">Choisissez un restaurant</a>
                 </li>
-                <li class="barnav__li">
-                    <div class="barnav__li__num">2</div>
-                    <div class="barnav__li__div"><i class="fas fa-list-ul barnav__li__fas barnav__li__fas__list"></i></div>
-                    <a href="" class="barnav__li__a a">Composez votre menu</a>
+                <li class="fonction__li li">
+                    <div class="fonction__li__num">2</div>
+                    <div class="fonction__li__div">
+                        <img class="ico--fonction list" src="/Font_awesome/list-ul.svg" alt="Icone de liste Ohmyfood"/>
+                    </div>
+                    <a href="" class="fonction__li__a a">Composez votre menu</a>
                 </li>
-                <li class="barnav__li">
-                    <div class="barnav__li__num">3</div>
-                    <div class="barnav__li__div"><i class="fas fa-store barnav__li__fas"></i></div>
-                    <a href="" class="barnav__li__a a">Dégustez au restaurant</a>
+                <li class="fonction__li li">
+                    <div class="fonction__li__num">3</div>
+                    <div class="fonction__li__div">
+                        <img class="ico--fonction store" src="/Font_awesome/store.svg" alt="Icone de restaurant Ohmyfood"/>
+                    </div>
+                    <a href="" class="fonction__li__a a">Dégustez au restaurant</a>
                 </li>
             </ul>
-        </nav>
+        </section>
 
 <!-- MAIN/RESTO-->
-        <section class="resto">
-            <h2 class="heading heading--h2"></h2>
-            <div class="carte">
-                <div class="carte__top">
-                    <img src="" alt="">
-                    <div class="nouveau">Nouveau</div>
-                </div>
-                <div class="carte__bottom">
-                    <div class="carte__bottom__left">
-                        <h3 class="heading heading--h3">La palette du goût</h3>
-                        <p class="text text--carte">Ménilmontant</p>
-                    </div>
-                    <i class="carte__bottom__i"></i>
-                </div>
-            </div>
-            <div class="carte">
-                <div class="carte__top">
-                    <img src="" alt="">
-                    <div class="nouveau">Nouveau</div>
-                </div>
-                <div class="carte__bottom">
-                    <div class="carte__bottom__left">
-                        <h3 class="heading heading--h3">La note enchantée</h3>
-                        <p class="text text--carte">Charonne</p>
-                    </div>
-                    <i class="carte__bottom__i"></i>
-                </div>
-            </div>
-            <div class="carte">
-                <div class="carte__top">
-                    <img src="" alt="">
-                </div>
-                <div class="carte__bottom">
-                    <div class="carte__bottom__left">
-                        <h3 class="heading heading--h3">À la française</h3>
-                        <p class="text text--carte">Cité rouge</p>
-                    </div>
-                    <i class="carte__bottom__i"></i>
-                </div>
-            </div>
-            <div class="carte">
-                <div class="carte__top">
-                    <img src="" alt="">
-                </div>
-                <div class="carte__bottom">
-                    <div class="carte__bottom__left">
-                        <h3 class="heading heading--h3">Le délice des sens</h3>
-                        <p class="text text--carte">Folie-Méricourt</p>
-                    </div>
-                    <i class="carte__bottom__i"></i>
-                </div>
-            </div>
+        <section class="resto" id="resto">
+            <h2 class="heading heading--h2 heading--h2--resto">Restaurants</h2>
+            <ul class="resto__ul">
+                <li class="resto__li li">
+                    <a href="" class="resto__a a"> 
+                        <div class="resto__a__top resto__a__top__1">
+                            <div class="nouveau text--nouveau">Nouveau</div>
+                        </div>
+                        <div class="resto__a__bottom">
+                                <h3 class="heading heading--h3">La palette du goût</h3>
+                                <p class="text text--resto">Ménilmontant</p>
+                                <div class="resto__a__divico"><i class="far fa-heart"></i></div>
+                        </div>
+                    </a>    
+                </li>
+                <li class="resto__li li">
+                    <a href="" class="resto__a a"> 
+                        <div class="resto__a__top resto__a__top__2">
+                            <div class="nouveau text--nouveau">Nouveau</div>
+                        </div>
+                        <div class="resto__a__bottom">
+                                <h3 class="heading heading--h3">La note enchantée</h3>
+                                <p class="text text--resto">Charonne</p>
+                                <div class="resto__a__divico"><i class="far fa-heart"></i></div>
+                        </div>
+                    </a>    
+                </li>
+                <li class="resto__li li">
+                    <a href="" class="resto__a a"> 
+                        <div class="resto__a__top resto__a__top__3">
+                        </div>
+                        <div class="resto__a__bottom">
+                                <h3 class="heading heading--h3">À la française</h3>
+                                <p class="text text--resto">Cité rouge</p>
+                                <div class="resto__a__divico"><i class="far fa-heart"></i></div>
+                        </div>
+                    </a>   
+                </li>
+                <li class="resto__li li">
+                    <a href="" class="resto__a a"> 
+                        <div class="resto__a__top resto__a__top__4">
+                        </div>
+                        <div class="resto__a__bottom">
+                                <h3 class="heading heading--h3">Le délice des sens</h3>
+                                <p class="text text--resto">Folie-Méricourt</p>
+                                <div class="resto__a__divico"><i class="far fa-heart"></i></div>
+                        </div>
+                    </a>  
+                </li>    
+            </ul>
         </section>
 
     </main>
 
 <!-- FOOTER -->
     <footer class="footer">
-        <div class="footer__logo">
-            <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="footer__logo__img">
-        </div>
-        <div class="footer__div">
-            <i class="footer__div__i"></i>
-            <a class="footer__div__a">Proposer un restaurant</a>
-        </div>
-        <div class="footer__div">
-            <i class="footer__div__i"></i>
-            <a class="footer__div__a">Devenir partenaire</a>
-        </div>
-        <a class="footer__div__a">Mentions légales</a>
-        <a class="footer__div__a">Contact</a>
+        <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="footer__logo">
+        <nav class="footer__nav">
+            <ul class="footer__ul">
+                <li class="footer__li li">
+                    <div><img class="ico--footer ico--footer--1" src="/Font_awesome/utensils.svg" alt="Icone de couverts de restaurant Ohmyfood"/></div>
+                    <a href="#" class="footer__li__a a">Proposer un restaurant</a>
+                </li>
+                <li class="footer__li li">
+                    <div><img class="ico--footer ico--footer--2" src="/Font_awesome/hands-helping.svg" alt="Poignée de mains Ohmyfood"/></div>
+                    <a href="#" class="footer__li__a a">Devenir partenaire</a>
+                </li>
+                <li class="footer__li li ">
+                    <a href="#" class="footer__li__a a">Mentions légales</a>
+                </li>
+                <li class="footer__li li">
+                    <a href="#" class="footer__li__a a">Contact</a>
+                </li>
+            </ul>
+        </nav>
     </footer>
     
 </body>
