--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <!-- HEADER -->
 
     <header class="header">
-        <a href="accueil.html" class="header__arrow"><i class="header__arrow__i"></i></a>
         <div class="header__logo">
             <a class="header__logo__a" href="accueil.html">
                 <img src="images/logo/ohmyfood@2x.svg" alt="Logo de l'entreprise Ohmyfood" class="header__logo__img"/>
@@ -35,12 +34,12 @@
 
 <!-- MAIN -->
 
-    <main class="main">
+    <main class="main--accueil">
 
 <!-- MAIN/EXPLO-->
         <div class="background"></div>
         <section class="explo">
-            <h1 class="heading heading--h1">Réservez le menu qui vous convient</h1>
+            <h1 class="heading heading--h1 heading--h1--explo">Réservez le menu qui vous convient</h1>
             <p class="text text--search">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             <div class="button button--explo"><a class="a a--explo" href="#resto" >Explorer nos restaurants</a></div>
         </section>
@@ -78,7 +77,7 @@
             <h2 class="heading heading--h2 heading--h2--resto">Restaurants</h2>
             <ul class="resto__ul">
                 <li class="resto__li li">
-                    <a href="" class="resto__a a"> 
+                    <a href="lapalettedugout.html" class="resto__a a"> 
                         <div class="resto__a__top resto__a__top__1">
                             <div class="nouveau text--nouveau">Nouveau</div>
                         </div>
