Fin HTML + stylage fin + animation coche

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </div>
     </header>
 
-<!-- MAIN -->
+<!-- SECTION MAIN -->
 
     <main class="main--accueil">
 
-<!-- MAIN/EXPLO-->
+<!-- SECTION MAIN/EXPLO-->
         <div class="background"></div>
         <section class="explo">
             <h1 class="heading heading--h1 heading--h1--explo">Réservez le menu qui vous convient</h1>
@@ -44,7 +44,7 @@
             <div class="button button--explo"><a class="a a--explo" href="#resto" >Explorer nos restaurants</a></div>
         </section>
 
-<!-- MAIN/FONCTION-->
+<!-- SECTION MAIN/FONCTION-->
         <section class="fonction">
             <h2 class="heading heading--h2 heading--h2--fonction">Fonctionnement</h2>
             <ul class="fonction__ul">
@@ -72,7 +72,7 @@
             </ul>
         </section>
 
-<!-- MAIN/RESTO-->
+<!-- SECTION MAIN/RESTO-->
         <section class="resto" id="resto">
             <h2 class="heading heading--h2 heading--h2--resto">Restaurants</h2>
             <ul class="resto__ul">
