--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -2,11 +2,11 @@
 <html lang="fr">
 <head>
 
-    <title>La palette du goût - Ohmyfood</title>
+    <title>Le délice des sens - Ohmyfood</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Commander à l'avance votre menu du restaurant gastronomique parisien la palette du goût grace à Ohmyfood" />
-    <meta name="keywords" content="Ohmyfood, commande, repas, restaurant, gastronomique, La palette du goût, menu, entrées, plats, desserts, Paris">
+    <meta name="description" content="Commander à l'avance votre menu du restaurant gastronomique parisien Le délice des sens grace à Ohmyfood" />
+    <meta name="keywords" content="Ohmyfood, commande, repas, restaurant, gastronomique, le délice des sens, menu, entrées, plats, desserts, Paris">
     <meta name="author" content="Damien Will">
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,24 +31,25 @@
 
     <main class="main--palette">
 
- <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->  
+<!-- SECTION MAIN--PALETTE/ PLATPHOTO-->         
         <section class="platphoto">
-            <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat sur assiette du restaurant La palette du goût pour commande repas Ohmyfood" class="platphoto__img">
+            <img src="/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Plat sur assiette du restaurant Le délice des sens pour commande repas Ohmyfood" class="platphoto__img">
         </section>
 
 <!-- SECTION MAIN--PALETTE/ COMMANDE-->         
         <section class="commande">
-            <h1 class="heading heading--h1 heading--h1--commande">La palette du goût</h1>
+            <h1 class="heading heading--h1 heading--h1--commande">Le délice des sens</h1>
             <div class="commande__divico"><i class="far fa-heart"></i></div>
 
-        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->             
+        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->            
                 <div class="carte carte-entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
                     <ul class="commande__ul">
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Fricassée d'escargot</h3>
-                            <p class="text text--commande">Au piment d'espelette</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Tartare de thon</h3>
+                            <p class="text text--commande">Assaisonné au yuzu</p>  
                             <div class="commande__li__center">
+                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">25€</div>
                             </div>
                             <div class="commande__li__right">
@@ -59,8 +60,8 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard mi-cuit</h3>
-                            <p class="text text--commande">Et ses copeaux de truffe noire</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Bouchée de homard croustillant</h3>
+                            <p class="text text--commande">Et sa farandole de petits légumes</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">35€</div>
@@ -73,10 +74,9 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Oeuf au plat</h3>
-                            <p class="text text--commande">Assaisonné à la truffe sur lit de caviar</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Velouté de cèpes</h3>
+                            <p class="text text--commande">Aux truffes</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">20€</div>
                             </div>
                             <div class="commande__li__right">
@@ -88,16 +88,15 @@
                     </ul>
                 </div>
 
-        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->                 
+        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->                   
                 <div class="carte carte-plats">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Plats</h2></div>
                     <ul class="commande__ul">
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Filet de boeuf aux herbes</h3>
-                            <p class="text text--commande">Accompagné de sa ribambelle de légumes</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Poulet rôti aux herbes de <br>Provence</h3>
+                            <p class="text text--commande">Et sa crème de truffe</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">40€</div>
+                                <div class="text text--commande commande__li__center__price commande__li__center__price__provence">40€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -107,10 +106,9 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Parmentier de queue de boeuf</h3>
-                            <p class="text text--commande">À la truffe noire sur sa purée de panais</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Langouste rôtie</h3>
+                            <p class="text text--commande">Et ses légumes de saison</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -121,8 +119,8 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Filet de turbot</h3>
-                            <p class="text text--commande">Aux agrumes</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Côte de boeuf Angus </h3>
+                            <p class="text text--commande">Et sa purée de panais</p>  
                             <div class="commande__li__center">
                                 <div class="text text--commande commande__li__center__price">44€</div>
                             </div>
@@ -140,8 +138,8 @@
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
                     <ul class="commande__ul">
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Paris-Brest</h3>
-                            <p class="text text--commande">Revisité</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Farandole de desserts</h3>
+                            <p class="text text--commande">Du chef</p>  
                             <div class="commande__li__center">
                                 <div class="text text--commande commande__li__center__price">18€</div>
                             </div>
@@ -153,10 +151,9 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Macaron au chocolat d'exception</h3>
-                            <p class="text text--commande">Et glace à la vanille de Madagascar</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Crème brulée</h3>
+                            <p class="text text--commande">Revisitée</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">22€</div>
                             </div>
                             <div class="commande__li__right">
@@ -167,10 +164,9 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Mousse au chocolat</h3>
-                            <p class="text text--commande">Au piment d'Espelette et à la truffe noire</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Tiramisu</h3>
+                            <p class="text text--commande">À la noisette</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
