--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -2,11 +2,11 @@
 <html lang="fr">
 <head>
 
-    <title>La palette du goût - Ohmyfood</title>
+    <title>La note enchantée - Ohmyfood</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Commander à l'avance votre menu du restaurant gastronomique parisien la palette du goût grace à Ohmyfood" />
-    <meta name="keywords" content="Ohmyfood, commande, repas, restaurant, gastronomique, La palette du goût, menu, entrées, plats, desserts, Paris">
+    <meta name="description" content="Commander à l'avance votre menu du restaurant gastronomique parisien La note enchantée grace à Ohmyfood" />
+    <meta name="keywords" content="Ohmyfood, commande, repas, restaurant, gastronomique, La note enchantée, menu, entrées, plats, desserts, Paris">
     <meta name="author" content="Damien Will">
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <!-- HEADER -->
+<!-- HEADER -->
 
     <header class="header">
         <div class="header__logo">
@@ -29,26 +29,27 @@
 
  <!-- SECTION MAIN--PALETTE -->
 
-    <main class="main--palette">
-
- <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->  
+    <main class="main main--palette">
+        
+ <!-- SECTION MAIN--PALETTE/ PLATPHOTO-->     
         <section class="platphoto">
-            <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Plat sur assiette du restaurant La palette du goût pour commande repas Ohmyfood" class="platphoto__img">
+            <img src="/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Plat sur assiette du restaurant La note enchantée pour commande repas Ohmyfood" class="platphoto__img platphoto__img--note">
         </section>
 
-<!-- SECTION MAIN--PALETTE/ COMMANDE-->         
+<!-- SECTION MAIN--PALETTE/ COMMANDE--> 
         <section class="commande">
-            <h1 class="heading heading--h1 heading--h1--commande">La palette du goût</h1>
+            <h1 class="heading heading--h1 heading--h1--commande">La note enchantée</h1>
             <div class="commande__divico"><i class="far fa-heart"></i></div>
 
-        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE-->             
+        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-ENTREE--> 
                 <div class="carte carte-entrees">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Entrées</h2></div>
                     <ul class="commande__ul">
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Fricassée d'escargot</h3>
-                            <p class="text text--commande">Au piment d'espelette</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Ravioles de foie gras </h3>
+                            <p class="text text--commande">Accompagnés de leur crème à la truffe</p>  
                             <div class="commande__li__center">
+                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">25€</div>
                             </div>
                             <div class="commande__li__right">
@@ -59,8 +60,8 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard mi-cuit</h3>
-                            <p class="text text--commande">Et ses copeaux de truffe noire</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Caviar osciètre</h3>
+                            <p class="text text--commande">Sur blini à la farine de blé noir</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">35€</div>
@@ -73,11 +74,23 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Oeuf au plat</h3>
-                            <p class="text text--commande">Assaisonné à la truffe sur lit de caviar</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Homard et espuma de potiron</h3>
+                            <p class="text text--commande">Mariné aux zestes d'orange</p>  
+                            <div class="commande__li__center">
+                                <div class="text text--commande commande__li__center__price">20€</div>
+                            </div>
+                            <div class="commande__li__right">
+                                <div class="commande__li__right__cont">
+                                    <i class="fas fa-check"></i>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="commande__li li">
+                            <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard cuit entier</h3>
+                            <p class="text text--commande">Confiture de figue et pain toasté</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">20€</div>
+                                <div class="text text--commande commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -88,13 +101,13 @@
                     </ul>
                 </div>
 
-        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->                 
+        <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-PLATS-->        
                 <div class="carte carte-plats">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Plats</h2></div>
                     <ul class="commande__ul">
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Filet de boeuf aux herbes</h3>
-                            <p class="text text--commande">Accompagné de sa ribambelle de légumes</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Noix de coquilles Saint-Jacques</h3>
+                            <p class="text text--commande">Sur lit de purée de céleri-rave</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">40€</div>
@@ -107,10 +120,9 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Parmentier de queue de boeuf</h3>
-                            <p class="text text--commande">À la truffe noire sur sa purée de panais</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Langoustine poêlée</h3>
+                            <p class="text text--commande">Purée de patate douce</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
@@ -121,9 +133,10 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Filet de turbot</h3>
-                            <p class="text text--commande">Aux agrumes</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Mijoté de queue de boeuf</h3>
+                            <p class="text text--commande">Et riz sauvage aux zestes de citron</p>  
                             <div class="commande__li__center">
+                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">44€</div>
                             </div>
                             <div class="commande__li__right">
@@ -135,14 +148,15 @@
                     </ul>
                 </div> 
 
-            <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-DESSERTS-->                
+            <!-- SECTION MAIN--PALETTE/ COMMANDE/ CARTE-DESSERTS-->
                 <div class="carte carte-desserts">
                     <div class="commande__bordure"><h2 class="heading heading--h2 heading--h2--entree">Desserts</h2></div>
                     <ul class="commande__ul">
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Paris-Brest</h3>
-                            <p class="text text--commande">Revisité</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Macaron noisette et chocola</h3>
+                            <p class="text text--commande">Glace au caramel brun et sel de Guérande</p>  
                             <div class="commande__li__center">
+                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">18€</div>
                             </div>
                             <div class="commande__li__right">
@@ -153,10 +167,9 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Macaron au chocolat d'exception</h3>
-                            <p class="text text--commande">Et glace à la vanille de Madagascar</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Baba au rhum revisité</h3>
+                            <p class="text text--commande">Avec son coulis de citron</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">22€</div>
                             </div>
                             <div class="commande__li__right">
@@ -167,10 +180,9 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Mousse au chocolat</h3>
-                            <p class="text text--commande">Au piment d'Espelette et à la truffe noire</p>  
+                            <h3 class="heading heading--h3 heading--h3--commande">Tarte au citron meringuée</h3>
+                            <p class="text text--commande">Déstructurée</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
                                 <div class="text text--commande commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
