--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </a>    
                 </li>
                 <li class="resto__li li">
-                    <a href="" class="resto__a a"> 
+                    <a href="lanoteenchantee.html" class="resto__a a"> 
                         <div class="resto__a__top resto__a__top__2">
                             <div class="nouveau text--nouveau">Nouveau</div>
                         </div>
@@ -101,7 +101,7 @@
                     </a>    
                 </li>
                 <li class="resto__li li">
-                    <a href="" class="resto__a a"> 
+                    <a href="alafrancaise.html" class="resto__a a"> 
                         <div class="resto__a__top resto__a__top__3">
                         </div>
                         <div class="resto__a__bottom">
@@ -112,7 +112,7 @@
                     </a>   
                 </li>
                 <li class="resto__li li">
-                    <a href="" class="resto__a a"> 
+                    <a href="ledelicedessens.html" class="resto__a a"> 
                         <div class="resto__a__top resto__a__top__4">
                         </div>
                         <div class="resto__a__bottom">
