Media queries pages menu

--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -177,7 +177,7 @@
                         </li>
                     </ul>
                 </div>  
-                <div class="button button--commande"><a class="a a--explo" href="#resto" >Commander</a></div>
+                <div class="button button--explo"><a class="a a--explo" href="#resto" >Commander</a></div>
         </section>
 
     </main>
