Design titres et texte

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -49,7 +49,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Tartare de poulpe acidulé</h3>
                             <p class="text text--commande">Aux zestes d'orange</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">25€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -63,7 +63,7 @@
                             <p class="text text--commande">Carotte, panais, topinambour</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -76,7 +76,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Soupe à l'oignon</h3>
                             <p class="text text--commande">Revisitée</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">20€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -96,7 +96,7 @@
                             <p class="text text--commande">Accompagnées d'une purée de panais</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">40€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">40€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -110,7 +110,7 @@
                             <p class="text text--commande">Et parmentier de pommes de terre</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -124,7 +124,7 @@
                             <p class="text text--commande">Sur son lit de gnocchis aux légumes</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">44€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -143,7 +143,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Pétales de violettes glacés</h3>
                             <p class="text text--commande">Et purée de noisettes</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">18€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -156,7 +156,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Fondant au chocolat</h3>
                             <p class="text text--commande">Revisité</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">22€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -169,7 +169,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Millefeuille croustillant</h3>
                             <p class="text text--commande">Myrtilles et pâte d’amande</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">23€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -179,7 +179,7 @@
                         </li>
                     </ul>
                 </div>  
-                <div class="button button--explo"><a class="a a--explo" href="#resto" >Commander</a></div>
+                <div class="button button--commande"><a class="a a--explo" href="#resto" >Commander</a></div>
         </section>
 
     </main>
@@ -198,10 +198,10 @@
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
-                    <a href="#" class="footer__li__a a">Mentions légales</a>
+                    <a href="#" class="footer__li__a a a--footer">Mentions légales</a>
                 </li>
                 <li class="footer__li li">
-                    <a href="#" class="footer__li__a a">Contact</a>
+                    <a href="mailto:elleestou@tamere.com" class="footer__li__a a a--footer">Contact</a>
                 </li>
             </ul>
         </nav>
