--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
                     <div class="fonction__li__div">
                         <img class="ico--fonction tel" src="/Font_awesome/mobile-alt.svg" alt="Icone de telephone Ohmyfood"/>
                     </div>
-                    <a href="" class="fonction__li__a a">Choisissez un restaurant</a>
+                    <a href="" class="fonction__li__a a a--fonction">Choisissez un restaurant</a>
                 </li>
                 <li class="fonction__li li">
                     <div class="fonction__li__num">2</div>
                     <div class="fonction__li__div">
                         <img class="ico--fonction list" src="/Font_awesome/list-ul.svg" alt="Icone de liste Ohmyfood"/>
                     </div>
-                    <a href="" class="fonction__li__a a">Composez votre menu</a>
+                    <a href="" class="fonction__li__a a a--fonction">Composez votre menu</a>
                 </li>
                 <li class="fonction__li li">
                     <div class="fonction__li__num">3</div>
                     <div class="fonction__li__div">
                         <img class="ico--fonction store" src="/Font_awesome/store.svg" alt="Icone de restaurant Ohmyfood"/>
                     </div>
-                    <a href="" class="fonction__li__a a">Dégustez au restaurant</a>
+                    <a href="" class="fonction__li__a a a--fonction">Dégustez au restaurant</a>
                 </li>
             </ul>
         </section>
@@ -141,10 +141,10 @@
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
-                    <a href="#" class="footer__li__a a">Mentions légales</a>
+                    <a href="#" class="footer__li__a a a--footer">Mentions légales</a>
                 </li>
                 <li class="footer__li li">
-                    <a href="#" class="footer__li__a a">Contact</a>
+                    <a href="mailto:elleestou@tamere.com" class="footer__li__a a a--footer">Contact</a>
                 </li>
             </ul>
         </nav>
