--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -50,7 +50,7 @@
                             <p class="text text--commande">Accompagnés de leur crème à la truffe</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">25€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -64,7 +64,7 @@
                             <p class="text text--commande">Sur blini à la farine de blé noir</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -77,7 +77,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Homard et espuma de potiron</h3>
                             <p class="text text--commande">Mariné aux zestes d'orange</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">20€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -90,7 +90,7 @@
                             <p class="text text--commande">Confiture de figue et pain toasté</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -110,7 +110,7 @@
                             <p class="text text--commande">Sur lit de purée de céleri-rave</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">40€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">40€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -123,7 +123,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Langoustine poêlée</h3>
                             <p class="text text--commande">Purée de patate douce</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -137,7 +137,7 @@
                             <p class="text text--commande">Et riz sauvage aux zestes de citron</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">44€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -157,7 +157,7 @@
                             <p class="text text--commande">Glace au caramel brun et sel de Guérande</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">18€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -170,7 +170,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Baba au rhum revisité</h3>
                             <p class="text text--commande">Avec son coulis de citron</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">22€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -183,7 +183,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Tarte au citron meringuée</h3>
                             <p class="text text--commande">Déstructurée</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">23€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -193,7 +193,7 @@
                         </li>
                     </ul>
                 </div>  
-                <div class="button button--explo"><a class="a a--explo" href="#resto" >Commander</a></div>
+                <div class="button button--commande"><a class="a a--explo" href="#resto" >Commander</a></div>
         </section>
 
     </main>
@@ -212,10 +212,10 @@
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
-                    <a href="#" class="footer__li__a a">Mentions légales</a>
+                    <a href="#" class="footer__li__a a a--footer">Mentions légales</a>
                 </li>
                 <li class="footer__li li">
-                    <a href="#" class="footer__li__a a">Contact</a>
+                    <a href="mailto:elleestou@tamere.com" class="footer__li__a a a--footer">Contact</a>
                 </li>
             </ul>
         </nav>
