--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -49,7 +49,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Fricassée d'escargot</h3>
                             <p class="text text--commande">Au piment d'espelette</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">25€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -62,8 +62,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Foie gras de canard mi-cuit</h3>
                             <p class="text text--commande">Et ses copeaux de truffe noire</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -77,7 +76,7 @@
                             <p class="text text--commande">Assaisonné à la truffe sur lit de caviar</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">20€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -96,8 +95,8 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Filet de boeuf aux herbes</h3>
                             <p class="text text--commande">Accompagné de sa ribambelle de légumes</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">40€</div>
+                                <div class="commande__li__center__points commande__li__center__points--opa">....</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">40€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -111,7 +110,7 @@
                             <p class="text text--commande">À la truffe noire sur sa purée de panais</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -121,10 +120,10 @@
                         </li>
 
                         <li class="commande__li li">
-                            <h3 class="heading heading--h3 heading--h3--commande">Filet de turbot</h3>
+                            <h3 class="heading heading--h3 heading--h3--commande">Filet de Turbot</h3>
                             <p class="text text--commande">Aux agrumes</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">44€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -143,7 +142,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Paris-Brest</h3>
                             <p class="text text--commande">Revisité</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">18€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -157,7 +156,7 @@
                             <p class="text text--commande">Et glace à la vanille de Madagascar</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">22€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -171,7 +170,7 @@
                             <p class="text text--commande">Au piment d'Espelette et à la truffe noire</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">23€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -181,7 +180,7 @@
                         </li>
                     </ul>
                 </div>  
-                <div class="button button--explo"><a class="a a--explo" href="#resto" >Commander</a></div>
+                <div class="button button--commande"><a class="a a--explo" href="#resto" >Commander</a></div>
         </section>
 
     </main>
@@ -200,10 +199,10 @@
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
-                    <a href="#" class="footer__li__a a">Mentions légales</a>
+                    <a href="#" class="footer__li__a a a--footer">Mentions légales</a>
                 </li>
                 <li class="footer__li li">
-                    <a href="#" class="footer__li__a a">Contact</a>
+                    <a href="mailto:elleestou@tamere.com" class="footer__li__a a a--footer">Contact</a>
                 </li>
             </ul>
         </nav>
