--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -49,8 +49,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Tartare de thon</h3>
                             <p class="text text--commande">Assaisonné au yuzu</p>  
                             <div class="commande__li__center">
-                                <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">25€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">25€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -64,7 +63,7 @@
                             <p class="text text--commande">Et sa farandole de petits légumes</p>  
                             <div class="commande__li__center">
                                 <div class="commande__li__center__points">....</div>
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -77,7 +76,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Velouté de cèpes</h3>
                             <p class="text text--commande">Aux truffes</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">20€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">20€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -96,7 +95,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Poulet rôti aux herbes de <br>Provence</h3>
                             <p class="text text--commande">Et sa crème de truffe</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price commande__li__center__price__provence">40€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price commande__li__center__price__provence">40€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -109,7 +108,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Langouste rôtie</h3>
                             <p class="text text--commande">Et ses légumes de saison</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">35€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">35€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -122,7 +121,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Côte de boeuf Angus </h3>
                             <p class="text text--commande">Et sa purée de panais</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">44€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">44€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -141,7 +140,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Farandole de desserts</h3>
                             <p class="text text--commande">Du chef</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">18€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">18€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -154,7 +153,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Crème brulée</h3>
                             <p class="text text--commande">Revisitée</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">22€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">22€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -167,7 +166,7 @@
                             <h3 class="heading heading--h3 heading--h3--commande">Tiramisu</h3>
                             <p class="text text--commande">À la noisette</p>  
                             <div class="commande__li__center">
-                                <div class="text text--commande commande__li__center__price">23€</div>
+                                <div class="text text--commande text--commande--bold commande__li__center__price">23€</div>
                             </div>
                             <div class="commande__li__right">
                                 <div class="commande__li__right__cont">
@@ -177,7 +176,7 @@
                         </li>
                     </ul>
                 </div>  
-                <div class="button button--explo"><a class="a a--explo" href="#resto" >Commander</a></div>
+                <div class="button button--commande"><a class="a a--explo" href="#resto" >Commander</a></div>
         </section>
 
     </main>
@@ -196,10 +195,10 @@
                     <a href="#" class="footer__li__a a">Devenir partenaire</a>
                 </li>
                 <li class="footer__li li ">
-                    <a href="#" class="footer__li__a a">Mentions légales</a>
+                    <a href="#" class="footer__li__a a a--footer">Mentions légales</a>
                 </li>
                 <li class="footer__li li">
-                    <a href="#" class="footer__li__a a">Contact</a>
+                    <a href="mailto:elleestou@tamere.com" class="footer__li__a a a--footer">Contact</a>
                 </li>
             </ul>
         </nav>
